tests/NormalTests/paczka1/fuzzy1/22745220.err
Error in line 2: MF4S9dZP A882 33,9
Error in line 11: FZzQDN S605 73,4
Error in line 29: EDgd A882 58,8
